--- a/place.html
+++ b/place.html
@@ -129,8 +129,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="current-year"></span> Japan Travel Guide. All rights reserved.</p>
-        <p>Last modified: <span id="last-modified"></span></p>
+        <p>&copy; <span id="year"></span> | 🌹Kenneth Osaohenmwanta Omoruyi 🌹 Japan| WDD 131 | Last Modified: <span id="lastModified"></span></p>
     </footer>
 </body>
 </html>
